Fri Oct 12 00:46:03 UTC 2012  Dennis Feiock  <dfeiock at iupui dot edu>

        * cuts/iccm/arch/tao/servant/TAO_Publisher_Table_T.h:
        * cuts/iccm/arch/tao/servant/TAO_Publisher_Table_T.cpp:

          Implemented the allocate_event and send_event methods

        * cuts/iccm/arch/tcpip/servant/TCPIP_Publisher_Table_T.h:
        * cuts/iccm/arch/tcpip/servant/TCPIP_Publisher_Table_T.cpp:

          Impleted the send_event method.

        * cuts/iccm/arch/tcpip/stub/TCPIP_Remote_Endpoint_T.cpp:

          Fixed missing include

Thu Oct 11 22:49:29 UTC 2012  Dennis Feiock  <dfeiock at iupui dot edu>

        * cuts/iccm/arch/tcpip/compiler/Stub_File.cpp:

          Fixed code generation errors.

        * tests/iccm/compiler:
        * tests/iccm/compiler/tao:
        * tests/iccm/compiler/tao/Smoke_Test.idl:
        * tests/iccm/compiler/tao/Smoke_Test.mpc:
        * tests/iccm/compiler/tao/driver.cpp:
        * tests/iccm/compiler/tcpip:
        * tests/iccm/compiler/tcpip/Smoke_Test.idl:
        * tests/iccm/compiler/tcpip/Smoke_Test.mpc:
        * tests/iccm/compiler/tcpip/driver.cpp:

          Created smoke test for iccm compilers including a basic
          driver to catch compilation errors.

Thu Oct 11 17:38:47 UTC 2012  Dennis Feiock  <dfeiock at iupui dot edu>

        * cuts/iccm/arch/tao/compiler/Stub_File.cpp:

          Changed iccm_tao events to subclass from the TAO OBV events.

Thu Oct 11 13:13:32 UTC 2012  Dennis Feiock  <dfeiock at iupui dot edu>

        * cuts/iccm/arch/dds/deployment/DDS_Component_Instance_Handler.h:

          Removed include for CIAO deployment handler

        * cuts/iccm/arch/dds/deployment/DDS_Component_Instance_Handler.cpp:
        * cuts/iccm/arch/dds/deployment/DDS_Container.inl:
        * cuts/iccm/arch/dds/deployment/DDS_Container_Strategy.cpp:

          Added template parameters to method calls on base classes

        * cuts/iccm/arch/opensplice/servant/OpenSplice_Servant.cpp:
