@@ -1,0 +1,20 @@
+//  $Id$
+
+#ifndef _TCPIP_EVENT_H_
+#define _TCPIP_EVENT_H_
+
+namespace iCCM
+{
+/**
+ * @struct TCPIP_Event_Traits
+ *
+ * Trait class for mapping TCPIP events to CORBA events, and visa
+ * versa.
+ */
+template <typename EVENT>
+struct TCPIP_Event_Traits;
+
+}
+
+#endif  // !defined _TCPIP_EVENT_H_
+
